# mqt-qcec

./: .gitignore  .gitmodules  CMakeLists.txt  flake.nix
bench/: CMakeLists.txt  bench_diff_application_scheme.cpp
bench/circuits/: shor_9_4_mapped_ibm_washington_qiskit_opt1_18.qasm  shor_9_4_mapped_ibm_washington_qiskit_opt2_18.qasm  shor_9_4_nativegates_ibm_qiskit_opt0_18.qasm  shor_9_4_nativegates_ibm_qiskit_opt2_18.qasm
include/: EquivalenceCheckingManager.hpp
include/checker/dd/: DDEquivalenceChecker.hpp
include/checker/dd/applicationscheme/: ApplicationScheme.hpp  DiffApplicationScheme.hpp
src/: EquivalenceCheckingManager.cpp
src/checker/dd/: DDAlternatingChecker.cpp  DDEquivalenceChecker.cpp
test/: test_equality.cpp  test_simple_circuit_identities.cpp
